[gd_scene load_steps=21 format=3 uid="uid://b8iotem83uvu0"]

[ext_resource type="Script" path="res://Scripts/Entity/FishEnemy.gd" id="1_c1y28"]
[ext_resource type="Script" path="res://Scripts/ResourceScripts/EnemyBehaviorSettings.gd" id="2_eew6s"]
[ext_resource type="Texture2D" uid="uid://dgi5korrp8ou" path="res://Assets/Art/Sprites/Entity/PlaceholderEnemyFishSpritesheet.png" id="2_xp6fr"]
[ext_resource type="Script" path="res://Scripts/Components/HealthComponent.gd" id="3_bwuq6"]
[ext_resource type="Script" path="res://Scripts/ResourceScripts/UIDContainer.gd" id="3_j1siw"]
[ext_resource type="Script" path="res://Scripts/Components/AttackBoxComponent.gd" id="4_p5whe"]
[ext_resource type="Script" path="res://Scripts/Components/HurtboxComponent.gd" id="5_cg6aa"]

[sub_resource type="Resource" id="Resource_sd441"]
script = ExtResource("2_eew6s")
health = 0
damage = 0
agressiveness = 0.0
view_range = null
view_distance = 0.0
sensor_type = 0

[sub_resource type="Resource" id="Resource_mkt0s"]
script = ExtResource("3_j1siw")
uid = 1726

[sub_resource type="CircleShape2D" id="CircleShape2D_rq2jk"]

[sub_resource type="AtlasTexture" id="AtlasTexture_7umgp"]
atlas = ExtResource("2_xp6fr")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_18rfv"]
atlas = ExtResource("2_xp6fr")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_x2xx6"]
atlas = ExtResource("2_xp6fr")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_b1hae"]
atlas = ExtResource("2_xp6fr")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_n4eev"]
atlas = ExtResource("2_xp6fr")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_3j5h7"]
atlas = ExtResource("2_xp6fr")
region = Rect2(0, 0, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_vceji"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_7umgp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_18rfv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_x2xx6")
}, {
"duration": 3.0,
"texture": SubResource("AtlasTexture_b1hae")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_n4eev")
}],
"loop": true,
"name": &"Attack",
"speed": 8.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_3j5h7")
}],
"loop": true,
"name": &"Idle",
"speed": 5.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_d8n50"]
radius = 12.0

[sub_resource type="CircleShape2D" id="CircleShape2D_lpu2o"]
radius = 6.08276

[sub_resource type="CircleShape2D" id="CircleShape2D_jbmmu"]
radius = 62.8258

[node name="FishEnemy" type="CharacterBody2D"]
script = ExtResource("1_c1y28")
settings = SubResource("Resource_sd441")
_player_detection_area_node_path = NodePath("PlayerDetectionArea")
uid = SubResource("Resource_mkt0s")

[node name="FishNavigation" type="NavigationAgent2D" parent="."]
target_desired_distance = 5.0
avoidance_enabled = true
radius = 15.0
neighbor_distance = 50.0
max_neighbors = 5

[node name="FishCollison" type="CollisionShape2D" parent="."]
position = Vector2(4, 0)
shape = SubResource("CircleShape2D_rq2jk")

[node name="FishAnimation" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_vceji")
animation = &"Attack"
autoplay = "Idle"
frame_progress = 0.596816

[node name="HealthComponent" type="Node" parent="."]
script = ExtResource("3_bwuq6")
component_container = NodePath("..")

[node name="AttackBoxComponent" type="Node" parent="."]
script = ExtResource("4_p5whe")
hurtbox = NodePath("../AttackBox")
component_container = NodePath("..")

[node name="HurtboxComponent" type="Node" parent="."]
script = ExtResource("5_cg6aa")
attachable_health_component = NodePath("../HealthComponent")
hurtbox = NodePath("../Hurtbox")
component_container = NodePath("..")

[node name="Hurtbox" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hurtbox"]
position = Vector2(4, 0)
shape = SubResource("CircleShape2D_d8n50")

[node name="AttackBox" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="AttackBox"]
position = Vector2(-5, -1)
shape = SubResource("CircleShape2D_lpu2o")

[node name="PlayerDetectionArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerDetectionArea"]
shape = SubResource("CircleShape2D_jbmmu")
